--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,37 @@
- 
+# Hub Subdirectory Apache Configuration
+# Handles React Router routing and pre-rendered static files
+
+# Enable Rewrite Engine
+RewriteEngine On
+
+# Serve existing files directly (assets, pre-rendered HTML, etc.)
+RewriteCond %{REQUEST_FILENAME} -f
+RewriteRule . - [L]
+
+# Serve existing directories directly
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule . - [L]
+
+# Handle /hub/ root - serve hub.html
+RewriteRule ^$ hub.html [L]
+
+# For box pages, try pre-rendered HTML first
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^box/([^/]+)/?$ box/$1.html [L]
+
+# Fallback to hub.html for React Router (SPA routing)
+RewriteRule ^.*$ hub.html [L]
+
+# Cache Control
+<FilesMatch "\.(js|css|png|jpg|jpeg|gif|svg|webp|ico|woff|woff2|ttf|eot)$">
+    Header set Cache-Control "public, max-age=31536000"
+</FilesMatch>
+
+<FilesMatch "\.html$">
+    Header set Cache-Control "public, max-age=3600"
+</FilesMatch>
+
+# Security headers
+Header always set X-Content-Type-Options "nosniff"
+Header always set X-Frame-Options "DENY"
+Header always set X-XSS-Protection "1; mode=block"
